# fullstack

docmindui-python-next/backend/: .env.example  Makefile  docker-compose.yml  pyproject.toml
docmindui-python-next/backend/alembic/: env.py
docmindui-python-next/backend/alembic/versions/: 5e686dccc06e_.py  a1b2c3d4e5f6_enable_pgvector.py  b2c3d4e5f6a7_create_documentos.py  c3d4e5f6a7b8_create_user_profiles.py  d4e5f6a7b8c9_create_knowledge_bases.py
docmindui-python-next/backend/docs/: ARCHITECTURE.md
docmindui-python-next/backend/src/: main.py
docmindui-python-next/backend/src/agents/graphs/: orchestrator.py
docmindui-python-next/backend/src/agents/prompts/: orchestrator.py
docmindui-python-next/backend/src/agents/state/: chat_state.py
docmindui-python-next/backend/src/agents/tools/: context.py  document_tools.py  user_tools.py
docmindui-python-next/backend/src/api/: error_handlers.py
docmindui-python-next/backend/src/api/routes/: agent.py  auth.py  documents.py  knowledge_bases.py  messages.py  (+1 more)
docmindui-python-next/backend/src/controllers/: agent_controller.py  document_controller.py  profile_controller.py
docmindui-python-next/backend/src/core/: config.py  dependencies.py  exceptions.py
docmindui-python-next/backend/src/database/: session.py
docmindui-python-next/backend/src/realtime/: events.py  schemas.py  socket_server.py
docmindui-python-next/backend/src/schemas/: agent.py  agent_activity.py  ai.py  auth.py  document.py  knowledge_base.py  message.py  message_response.py  profile.py
docmindui-python-next/backend/src/shared/: exceptions.py  message.py
docmindui-python-next/backend/src/workers/: celery_app.py  document_tasks.py  email_tasks.py  queues.py
docmindui-python-next/backend/tests/: conftest.py
docmindui-python-next/backend/tests/api/: test_routes.py
docmindui-python-next/backend/tests/modules/: test_agent_orchestrator.py  test_document_indexing.py
docmindui-python-next/backend/tests/services/: test_knowledge_base_slug.py
ecommerce-fullstack/ecommerce-ia/: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  ruff.toml
ecommerce-fullstack/ecommerce-ia/data/faq/: frete.md  pagamento.md  trocas.md
ecommerce-fullstack/ecommerce-ia/scripts/: index_catalog.py
ecommerce-fullstack/ecommerce-ia/src/ecommerce_ia/: __init__.py  container.py  main.py
ecommerce-fullstack/ecommerce-ia/tests/: test_admin_analyst.py  test_admin_chat.py  test_catalog_readiness.py  test_chat.py  test_health.py  test_image_catalog_matcher.py  test_status.py
(+762 files in other folders)
