[project]
name = "ecommerce-ia"
version = "0.1.0"
description = "AI chat service for ecommerce-fullstack"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "sqlalchemy[asyncio]>=2.0.40",
  "asyncpg>=0.30.0",
  "pydantic-settings>=2.8.0",
  "langchain>=0.3.21",
  "langchain-chroma>=0.2.4",
  "langchain-community>=0.3.20",
  "langchain-openai>=0.3.14",
  "langgraph>=0.3.21",
  "chromadb>=0.6.3",
  "python-socketio>=5.12.0",
  "aio-pika>=9.5.5",
  "aiokafka>=0.12.0",
  "httpx>=0.28.1",
  "redis>=8.0.0",
  "pyjwt>=2.13.0",
  "prometheus-client>=0.21.0",
  "prometheus-fastapi-instrumentator>=7.0.0",
]

[dependency-groups]
dev = [
  "ruff>=0.11.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ecommerce_ia"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
